--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ google_analytics: UA-45886163-5
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-slate
 plugins:
   - jekyll-feed
 
