Use new custom theme for site

--- a/_config.yml
+++ b/_config.yml
@@ -1,41 +1,44 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Kris Carta's personal site
-email: kriscarta@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Personal site for Kris Carta, with project links and a blog.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://www.kriscarta.com" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  kcarta
+title: Kris Carta's personal blog
+description: Personal Site and Blog
+author: Kris Carta
+author-tagline: Hi, I'm Kris
+github: https://github.com/kcarta
+about: I'm a software manager and developer, and love sharing my thoughts on *everything* to do with modern agile software delivery
+# disqus_shortname: xx
 google_analytics: UA-45886163-5
 
-# Build settings
-markdown: kramdown
-remote_theme: kcarta/flexible-jekyll
-plugins:
-  - jekyll-feed
+enableTags: true
+tagarray: []
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+social:
+    - icon: fa-linkedin
+      link: "https://www.linkedin.com/in/kriscarta"
+    - icon: fa-github
+      link: "https://github.com/kcarta"
+
+share:
+  twitter_username: github.io
+  fb_appid: 1749788565247320
+
+urls:
+    - text: About
+      url: /about/
+    - text: XML Feed
+      url: /feed.xml
+
+url: "https://www.kriscarta.com"
+baseurl: ""
+paginate: 20
+per_page: 20
+paginate_path: "/page/:num/"
+markdown: kramdown
+plugins:
+  - jekyll-paginate
+  - jekyll-gist
+
+compress_html:
+  clippings: all
+  comments: ["<!-- ", " -->"]
+  endings: all
+  ignore:
+    envs: ['development']
