--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@ _site*
 .sass-cache
 .jekyll-metadata
 *backup/
+
+# Gauge - metadata dir
+.gauge
+
+# Gauge - log files dir
+logs
+
+# Gauge - reports dir
+reports
+
+# Gauge - JavaScript node dependencies
+node_modules
