Remove awkward periods from about blurb

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: Personal Site and Blog
 author: Kris Carta
 author-tagline: Hi, I'm Kris
 github: https://github.com/kcarta
-about: I'm a software manager and developer. This is my space for exploring thoughts on *everything* to do with modern (agile) software delivery, from management to technology.
+about: I'm a software manager and developer, and this is my space for exploring thoughts on *everything* to do with modern (agile) software delivery, from management to technology
 
 # disqus_shortname: xx
 google_analytics: UA-45886163-5
