Remove share ids from config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ social:
     - icon: fa-github
       link: "https://github.com/kcarta"
 
-share:
-  twitter_username: github.io
-  fb_appid: 1749788565247320
+#share:
+#  twitter_username: github.io
+#  fb_appid: 1749788565247320
 
 urls:
     - text: About
