--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,10 @@ plugins:
   - jekyll-paginate
   - jekyll-gist
 
+collections:
+  posts:
+    permalink: /:collection/:title
+
 compress_html:
   clippings: all
   comments: ["<!-- ", " -->"]
